--- a/css/stiles.css
+++ b/css/stiles.css
@@ -5,14 +5,14 @@ body {
 li{
   font-size:1em;
   list-style:none;
-  font-family: 'Brush Script MT',cursive;
+  font-family: 'Garamond', serif;
   padding-top:5px
 
 }
 
 tr{
   font-size:1em;
-  font-family: 'Brush Script MT',cursive;
+  font-family: 'Garamond', serif;
 }
 
 hr {
@@ -46,7 +46,7 @@ p{
 
 .sottotitolo{
   font-size:1em;
-  font-family: 'Brush Script MT',cursive;
+  font-family: 'Garamond', serif;
   text-align:center;
 
 }
